# local-index

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/: reindex.md  search.md  status.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/milestones/v1.0-phases/01-foundation-file-processing/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/milestones/v1.0-phases/02-storage-embedding-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-search/: 03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/milestones/v1.0-phases/04-daemon-mode-observability/: 04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/milestones/v1.0-phases/04.1-sigterm-gap-closure/: 04.1-01-SUMMARY.md  04.1-REVIEW-FIX.md  04.1-REVIEW.md
.planning/milestones/v1.0-phases/05-web-dashboard/: 05-UI-SPEC.md  05-VERIFICATION.md
.planning/milestones/v1.0-phases/06-claude-code-integration/: 06-01-PLAN.md
.planning/milestones/v1.1-phases/08-search-ux-enhancements/: 08-01-PLAN.md  08-CONTEXT.md  08-PATTERNS.md  08-UI-SPEC.md  08-VERIFICATION.md
.planning/milestones/v1.2-phases/09-preprocessor-foundation/: 09-01-PLAN.md  09-02-SUMMARY.md
.planning/milestones/v1.2-phases/10-ocr-providers/: 10-01-SUMMARY.md  10-02-SUMMARY.md  10-DISCUSSION-LOG.md  10-PATTERNS.md
.planning/milestones/v1.2-phases/11-vision-enrichment-idempotency/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-DISCUSSION-LOG.md  11-PATTERNS.md  11-VALIDATION.md
.planning/phases/01-foundation-file-processing/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-VERIFICATION.md
.planning/phases/02-storage-embedding-pipeline/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-VALIDATION.md
.planning/phases/03-search/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-daemon-mode-observability/: 04-01-PLAN.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md
.planning/phases/04.1-sigterm-gap-closure/: 04.1-01-PLAN.md  04.1-REVIEW-FIX.md  04.1-VERIFICATION.md
.planning/phases/05-web-dashboard/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UI-SPEC.md  05-VALIDATION.md
.planning/phases/06-claude-code-integration/: 06-01-SUMMARY.md  06-CONTEXT.md  06-VERIFICATION.md
.planning/phases/07-operational-logging/: 07-01-PLAN.md  07-01-SUMMARY.md  07-UAT.md
.planning/phases/08-search-ux-enhancements/: 08-01-SUMMARY.md  08-DISCUSSION-LOG.md  08-RESEARCH.md  08-VALIDATION.md
.planning/phases/09-preprocessor-foundation/: 09-01-SUMMARY.md  09-02-PLAN.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-PATTERNS.md  09-RESEARCH.md  09-VALIDATION.md
.planning/phases/10-ocr-providers/: 10-01-PLAN.md  10-02-PLAN.md  10-CONTEXT.md  10-RESEARCH.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/phases/11-vision-enrichment-idempotency/: 11-CONTEXT.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  MILESTONE-v1.2-SEED-001.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-pdf-image-processor-daemon.md
scripts/: reindex.sh  search.sh  status.sh
src/: claude_rerank.rs  cli.rs  credentials.rs  error.rs  lib.rs  main.rs  test_support.rs  types.rs
src/daemon/: http.rs  metrics.rs  mod.rs  processor.rs  shutdown.rs  watcher.rs
src/pipeline/: chunker.rs  embedder.rs  mod.rs  store.rs  walker.rs
src/pipeline/assets/: anthropic_extract.rs  cache.rs  document_ai.rs  ignore_walk.rs  ingest.rs  mod.rs  ocr.rs  pdf_images.rs  pdf_local.rs  pdf_raster.rs
src/search/: engine.rs  formatter.rs  mod.rs  types.rs
src/web/: context.rs  error.rs  handlers.rs  highlight.rs  mod.rs
templates/: base.html  error.html  index.html  search.html  settings.html  status.html
tests/: anthropic_assets_mock.rs  claude_rerank_wiremock.rs  cli_integration.rs  daemon_smoke.rs  document_ai_mock.rs  index_assets_integration.rs  index_integration.rs  search_integration.rs  search_ux.rs  web_dashboard.rs
