[package]
name = "local-index"
version = "0.1.0"
edition = "2024"
description = "A Rust daemon that watches a directory tree, chunks markdown files by heading, embeds via Anthropic API, and stores in LanceDB for semantic search"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Markdown parsing
pulldown-cmark = "0.13"

# YAML frontmatter
serde_yml = "0.0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File discovery
walkdir = "2.5"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Vector storage
lancedb = "0.26.2"
lance-index = "=2.0.0"
arrow-array = "57"
arrow-schema = "57"

# HTTP client for Voyage AI
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Content hashing
sha2 = "0.11"

# Progress bars
indicatif = "0.18"

# Async stream utilities
futures = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Random for jitter
rand = "0.8"

# File watching
notify = "8.0"
notify-debouncer-full = "0.5"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Shutdown coordination
tokio-util = { version = "0.7", features = ["rt"] }

# Time for status command
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
serde_json = "1.0"
wiremock = "0.6"
